--- a/app/src/main/res/values-ar/strings_5.xml
+++ b/app/src/main/res/values-ar/strings_5.xml
@@ -47,15 +47,16 @@
     </string>
     <string name="help_recent_apps">
         <![CDATA[
-        ستمر أي مكالمة إذا تم استخدام أي تطبيق في القائمة مؤخرًا.<br>
+        أي مكالمة ستمر إذا تم استخدام أي تطبيق في القائمة مؤخرًا.<br>
         <br>
-        حالة استخدام نموذجية:<br>
-        &emsp; لقد طلبت للتو بيتزا في PizzaApp، وسرعان ما اتصلوا بك لاسترداد الأموال لأنهم سيغلقون. ستمر هذه المكالمة إذا تم تمكين PizzaApp هنا. <br>
+        حالة الاستخدام:<br>
+        <sample>
+          &ensp; طلب من تطبيق PizzaApp يسبب مكالمة استرداد فورية بسبب إغلاق المطعم، هذه المكالمة ستمر إذا كان PizzaApp مفعلاً هنا. <br>
+        </sample>
         <br>
-        الإعداد الافتراضي <highlight><b>5 دقائق</b></highlight> يعني أن أي مكالمة ستمر إذا تم استخدام أي من التطبيقات في غضون 5 دقائق،
-        بمعنى \"مستخدم\" يعني إما التنشيط أو إلغاء التنشيط أو التصغير أو الإنهاء. <br>
+        الإعداد الافتراضي <highlight><b>5 دقائق</b></highlight> يعني أن جميع المكالمات ستمر إذا تم استخدام أي من التطبيقات خلال 5 دقائق، وبعبارة \"<b>استخدام</b>\" تعني أي من: <highlight>تفعيل، إلغاء تفعيل، تصغير، أو إغلاق</highlight>.<br>
         <br>
-        ينطبق فقط على المكالمات، <b>ليس</b> على الرسائل النصية. <br>
+        ينطبق فقط على المكالمات، وليس على الرسائل النصية. <br>
         <br>
         <priority><b>الأولوية: 10</b></priority>
         ]]>
