--- a/app/src/main/res/values-fa/strings_5.xml
+++ b/app/src/main/res/values-fa/strings_5.xml
@@ -47,17 +47,18 @@
     </string>
     <string name="help_recent_apps">
         <![CDATA[
-        هر تماسی در صورتی عبور می‌کند که هر برنامه‌ای در لیست به تازگی استفاده شده باشد.<br>
+        هر تماس در صورتی عبور می‌کند که هر برنامه‌ای در فهرست به‌تازگی استفاده شده باشد.<br>
         <br>
-        یک مورد استفاده معمولی:<br>
-        &emsp; شما به تازگی در PizzaApp پیتزا سفارش داده‌اید، به زودی آنها برای بازپرداخت با شما تماس می‌گیرند زیرا در حال تعطیلی هستند. این تماس در صورتی عبور می‌کند که PizzaApp در اینجا فعال باشد. <br>
+        مثال استفاده:<br>
+        <sample>
+          &ensp; سفارشی از PizzaApp باعث تماس بازپرداخت فوری به دلیل بسته شدن رستوران می‌شود، این تماس در صورتی عبور می‌کند که PizzaApp در اینجا فعال باشد. <br>
+        </sample>
         <br>
-        تنظیم پیش‌فرض <highlight><b>5 دقیقه</b></highlight> به این معنی است که هر تماسی در صورتی عبور می‌کند که هر یک از برنامه‌ها در عرض 5 دقیقه استفاده شده باشند،
-        با «استفاده‌شده» منظور فعال شدن، غیرفعال شدن، کمینه شدن یا حذف شدن است. <br>
+        تنظیم پیش‌فرض <highlight><b>۵ دقیقه</b></highlight> به این معنی است که تمام تماس‌ها در صورتی عبور می‌کنند که هر یک از برنامه‌ها در مدت ۵ دقیقهٔ گذشته استفاده شده باشد، واژهٔ \"<b>استفاده شده</b>\" به معنای هر یک از: <highlight>فعال‌سازی، غیرفعال‌سازی، به‌حداقل‌کردن یا خاتمه</highlight>.<br>
         <br>
-        فقط برای تماس‌ها اعمال می‌شود، <b>نه</b> برای پیام‌های متنی. <br>
+        فقط برای تماس‌ها اعمال می‌شود، نه برای پیامک‌ها. <br>
         <br>
-        <priority><b>اولویت: 10</b></priority>
+        <priority><b>اولویت: ۱۰</b></priority>
         ]]>
     </string>
     <string-array name="block_type_list">
