--- a/app/src/main/res/values-iw/strings_5.xml
+++ b/app/src/main/res/values-iw/strings_5.xml
@@ -47,15 +47,17 @@
     </string>
     <string name="help_recent_apps">
         <![CDATA[
-        כל שיחה תעבור אם אפליקציה כלשהי ברשימה שימשה לאחרונה.<br>
+        כל שיחה תעבור אם אפליקציה כלשהי ברשימה שומשה לאחרונה.<br>
         <br>
-        מקרה שימוש טיפוסי:<br>
-        &emsp; הזמנתם פיצה באפליקציית פיצה, ומיד הם מתקשרים אליכם כדי להחזיר לכם כסף כי הם נסגרים. שיחה זו תעבור אם אפליקציית פיצה מופעלת כאן. <br>
+        מקרה שימוש:<br>
+        <sample>
+          &ensp; הזמנה ב-PizzaApp גורמת לשיחה מיידית של החזר עקב סגירת המסעדה, שיחה זו תעבור אם PizzaApp מופעלת כאן. <br>
+        </sample>
         <br>
-        הגדרת ברירת המחדל <highlight><b>5 דק\'</b></highlight> פירושה שכל שיחה תעבור אם אחת מהאפליקציות שימשה בתוך 5 דקות,
-        `שימשה` פירושה הפעלה, ביטול הפעלה, מיזעור או סגירה. <br>
+        ההגדרה ברירת המחדל <highlight><b>5 דקות</b></highlight> משמעותה שכל השיחות יעברו אם אפליקציה כלשהי שומשה בתוך 5 דקות,
+        על ידי \"<b>שומשה</b>\" הכוונה היא לכל אחד מ: <highlight>הופעלה, נוטרלה, ממוזערת, או נסגרה</highlight>.<br>
         <br>
-        חל רק על שיחות, <b>לא</b> על הודעות טקסט. <br>
+        חל על שיחות בלבד, לא על הודעות טקסט. <br>
         <br>
         <priority><b>עדיפות: 10</b></priority>
         ]]>
