--- a/app/src/main/res/values-ru/strings_5.xml
+++ b/app/src/main/res/values-ru/strings_5.xml
@@ -47,15 +47,17 @@
     </string>
     <string name="help_recent_apps">
         <![CDATA[
-        Любой звонок пройдет, если какое-либо приложение из списка использовалось недавно.<br>
+        Любой звонок будет пропущен, если любое приложение из списка использовалось недавно.<br>
         <br>
-        Типичный сценарий использования:<br>
-        &emsp; Вы только что заказали пиццу в PizzaApp, вскоре они звонят вам для возврата денег, потому что они закрываются. Этот звонок пройдет, если PizzaApp включен здесь. <br>
+        Пример использования:<br>
+        <sample>
+          &ensp; Заказ в PizzaApp вызывает немедленный звонок возврата из‑за закрытия ресторана, этот звонок будет пропущен, если PizzaApp включён здесь. <br>
+        </sample>
         <br>
-        Настройка по умолчанию <highlight><b>5 мин</b></highlight> означает, что любой звонок пройдет, если какое-либо из приложений использовалось в течение 5 минут,
-        под `использовалось` подразумевается активация, деактивация, сворачивание или завершение работы. <br>
+        Настройка по умолчанию <highlight><b>5 мин</b></highlight> означает, что все звонки будут пропущены, если любое из приложений использовалось в течение 5 минут,
+        под \"<b>использовано</b>\" подразумевается любое из: <highlight>активировано, деактивировано, свернуто или завершено</highlight>.<br>
         <br>
-        Применяется только к звонкам, <b>не</b> к текстовым сообщениям. <br>
+        Применяется только к звонкам, не к SMS. <br>
         <br>
         <priority><b>Приоритет: 10</b></priority>
         ]]>
