--- a/app/src/main/res/values-uk/strings_5.xml
+++ b/app/src/main/res/values-uk/strings_5.xml
@@ -46,15 +46,17 @@
     </string>
     <string name="help_recent_apps">
         <![CDATA[
-        Будь-який дзвінок пройде, якщо будь-який додаток зі списку використовувався нещодавно.<br>
+        Будь-який виклик буде пропущений, якщо будь-яка програма зі списку була використана нещодавно.<br>
         <br>
-        Типовий приклад використання:<br>
-        &emsp; Ви щойно замовили піцу в PizzaApp, скоро вони телефонуватимуть вам, щоб повернути гроші, оскільки закриваються. Цей дзвінок пройде, якщо PizzaApp увімкнено тут.<br>
+        Приклад використання:<br>
+        <sample>
+          &ensp; Замовлення в PizzaApp викликає миттєвий дзвінок про повернення через закриття ресторану, цей дзвінок буде пропущений, якщо PizzaApp увімкнено тут. <br>
+        </sample>
         <br>
-        Налаштування за замовчуванням <highlight><b>5 Хв</b></highlight> означає, що будь-який дзвінок пройде, якщо будь-який з додатків використовувався протягом 5 хвилин,
-        \"використовувався\" означає, що його активували, деактивували, згорнули або завершили.<br>
+        Типове налаштування <highlight><b>5 хв</b></highlight> означає, що всі виклики будуть пропущені, якщо будь-яка з програм була використана протягом 5 хвилин,
+        під словом \"<b>used</b>\" мається на увазі будь-що з: <highlight>активовано, деактивовано, згорнуто або завершено</highlight>.<br>
         <br>
-        Застосовується лише до дзвінків, <b>не</b> до текстових повідомлень.<br>
+        Застосовується лише до викликів, не до текстових повідомлень. <br>
         <br>
         <priority><b>Пріоритет: 10</b></priority>
         ]]>
