--- a/app/src/main/res/values-ja/strings_5.xml
+++ b/app/src/main/res/values-ja/strings_5.xml
@@ -46,16 +46,18 @@
     </string>
     <string name="help_recent_apps">
         <![CDATA[
-        リスト内のいずれかのアプリが最近使用された場合は、すべての通話が通過します。 <br>
+        リスト内の任意のアプリが最近使用されていれば、すべての電話は通過します。<br>
         <br>
-        一般的なユースケース: <br>
-        &emsp; PizzaApp でピザを注文したばかりで、閉店のためすぐに返金のために電話がかかってきました。 PizzaApp がここで有効になっている場合は、その通話は通過します。 <br>
+        使用例:<br>
+        <sample>
+          &ensp; レストランが閉店したため、PizzaApp の注文が即時の返金電話をトリガーします。この電話は、ここで PizzaApp が有効になっている場合に通過します。 <br>
+        </sample>
         <br>
-        デフォルト設定は<highlight><b>5 分</b></highlight>です。つまり、いずれかのアプリが 5 分以内に使用された場合は、すべての通話が通過します。`使用済み`とは、アクティブ化、非アクティブ化、最小化、または強制終了のいずれかです。 <br>
+        デフォルト設定 <highlight><b>5 分</b></highlight> は、アプリが 5 分以内に使用された場合、すべての電話が通過することを意味します。\"<b>使用</b>\" とは、<highlight>起動、停止、最小化、または終了</highlight> のいずれかを指します。<br>
         <br>
-        通話にのみ適用され、<b>テキストメッセージ</b>には適用されません。 <br>
+        電話にのみ適用され、テキストメッセージには適用されません。 <br>
         <br>
-        <priority><b>優先順位: 10</b></priority>
+        <priority><b>Priority: 10</b></priority>
         ]]>
     </string>
     <string name="help_hang_up_delay">通話を切るまでの遅延時間です。</string>
